--- a/analysis/exploratory_data_analysis/exporatory_data_analysis.Rmd
+++ b/analysis/exploratory_data_analysis/exporatory_data_analysis.Rmd
@@ -53,6 +53,10 @@ Histogram of monthly income reveals that it is highly skewed to the right.
 # histogram of MonthlyIncome
 train %>% ggplot(aes(x = MonthlyIncome)) +
   geom_histogram(bins = 15)
+
+# histogram of MonthlyIncome
+train %>% ggplot(aes(x = log(MonthlyIncome))) +
+  geom_histogram(bins = 15)
 ```
 
 A bar plot of Attrition reveals that the response variable is highly imbalanced.
@@ -75,8 +79,6 @@ features.numeric <- c('DailyRate', 'DistanceFromHome', 'Age', 'HourlyRate', 'Mon
 ```
 
 
-## Univariate Analysis
-
 Explore features in isolation and the relationship between features and the response variables.
 
 **Correlation to Response**
@@ -94,21 +96,9 @@ train.corToMI <- data.frame(flattenCorrMatrix(correlation.matrix$r, correlation.
 kable(train.corToMI)
 ```
 
-```{r, fig.height = 15, fig.width = 15}
-heatmap.cor <- function(df, palette){
-  df %>%
-    keep(is.numeric) %>%
-    drop_na() %>%
-    cor %>%
-    heatmap.2(col = palette,
-              density.info = 'none', trace = 'none',
-              dendrogram = c('both'), symm = F,
-              symkey = T, symbreaks = T, scale = 'none',
-              key = T)
-}
-my_p <- colorRampPalette(c('red','white','black'))(n = 299)
-heatmap.cor(train.numeric, my_p)
-```
+**Correlation Heatmap**
+
+`TotalworkingYears`, `Age`, `YearsAtCompany`, `YearsInCurrentRole`, and `YearsWithCurrentManager`.
 
 ```{r, fig.height = 10, fig.width = 10}
 heatmap.cor <- function(df){
@@ -119,8 +109,7 @@ heatmap.cor <- function(df){
     corrplot( addCoef.col = 'white',
              number.digits = 2,
              number.cex = 0.5,
-             method = 'square',
-             )
+             method = 'square')
 }
 heatmap.cor(train.numeric)
 ```
@@ -381,53 +370,815 @@ grid.arrange(p1,p2,p3, ncol = 2)
 ```
 
 ```{r}
-m.YearsAtCompany <- train %>% filter(YearsAtCompany > 0) %>% lm(log(YearsAtCompany) ~ YearsSinceLastPromotion +
-                         YearsInCurrentRole +
-                         YearsWithCurrManager, data = .)
+m.YearsAtCompany <- train %>% 
+  filter(YearsAtCompany > 0) %>% 
+  lm(log(YearsAtCompany) ~ YearsSinceLastPromotion +  YearsInCurrentRole + YearsWithCurrManager, data = .)
+
 summary(m.YearsAtCompany)
+
 train %>% filter(YearsAtCompany > 0) %>%basic.fit.plots(., m.YearsAtCompany)
 ```
 
+# Explanatory - factor Variables
 
-## Categorical Sandbox
+Exploration of the continuous variables.
+
+For investigation of the categrical variables, we will look at variables correlated to monthly income. Monthly income is correlated with `TotalworkingYears`, `Age`, `YearsAtCompany`, `YearsInCurrentRole`, and `YearsWithCurrentManager`.
 
 ```{r}
-train %>% keep(is.character) %>% names()
+# create a vector of numeric features
+features.factor <- c('BusinessTravel', 'Department', 'Education', 'EducationField', 'EmployeeNumber', 'EnvironmentSatisfaction', 'Gender', 'JobInvolvement', 'JobLevel', 'JobRole', 'JobSatisfaction', 'MaritalStatus', 'OverTime', 'PerformanceRating', 'RelationshipSatisfaction', 'StockOptionLevel', 'WorkLifeBalance')
+
+# factor categorical variables
+train[, features.factor] <- lapply(train[, features.factor], as.factor)
 ```
 
+## BusinessTravel
 
-```{r}
-train %>% 
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
+  ggplot(aes(x = BusinessTravel,
+             y = log(MonthlyIncome),
+             fill = BusinessTravel)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btAg <- train %>% 
+  ggplot(aes(x = BusinessTravel,
+             y = Age,
+             fill = BusinessTravel)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYAC <- train %>% 
+  ggplot(aes(x = BusinessTravel,
+             y = YearsAtCompany,
+             fill = BusinessTravel)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYCM <- train %>% 
+  ggplot(aes(x = BusinessTravel,
+             y = YearsWithCurrManager,
+             fill = BusinessTravel)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btTWY <- train %>% 
+  ggplot(aes(x = BusinessTravel,
+             y = TotalWorkingYears,
+             fill = BusinessTravel)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
+```
+
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
+  ggplot(aes(x = Gender,
+             y = log(MonthlyIncome),
+             fill = Gender)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btAg <- train %>% 
+  ggplot(aes(x = Gender,
+             y = Age,
+             fill = Gender)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYAC <- train %>% 
+  ggplot(aes(x = Gender,
+             y = YearsAtCompany,
+             fill = Gender)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYCM <- train %>% 
+  ggplot(aes(x = Gender,
+             y = YearsWithCurrManager,
+             fill = Gender)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btTWY <- train %>% 
+  ggplot(aes(x = Gender,
+             y = TotalWorkingYears,
+             fill = Gender)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
+```
+
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
   ggplot(aes(x = Department,
-             y = MonthlyIncome,
+             y = log(MonthlyIncome),
              fill = Department)) +
   geom_boxplot() + 
   scale_fill_few(palette = 'Dark') + 
   theme_few()
-```
 
-```{r}
-train %>% 
-  ggplot(aes(x = Gender,
-             y = MonthlyIncome,
-             fill = Gender)) +
+btAg <- train %>% 
+  ggplot(aes(x = Department,
+             y = Age,
+             fill = Department)) +
   geom_boxplot() + 
   scale_fill_few(palette = 'Dark') + 
   theme_few()
-```
 
-```{r}
-train %>% 
-  ggplot(aes(x = Gender,
-             y = MonthlyIncome,
-             fill = Gender)) +
-  geom_violin() + 
+btYAC <- train %>% 
+  ggplot(aes(x = Department,
+             y = YearsAtCompany,
+             fill = Department)) +
+  geom_boxplot() + 
   scale_fill_few(palette = 'Dark') + 
   theme_few()
+
+btYCM <- train %>% 
+  ggplot(aes(x = Department,
+             y = YearsWithCurrManager,
+             fill = Department)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btTWY <- train %>% 
+  ggplot(aes(x = Department,
+             y = TotalWorkingYears,
+             fill = Department)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
 ```
 
 
-## classification
+
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
+  ggplot(aes(x = Education,
+             y = log(MonthlyIncome),
+             fill = Education)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btAg <- train %>% 
+  ggplot(aes(x = Education,
+             y = Age,
+             fill = Education)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYAC <- train %>% 
+  ggplot(aes(x = Education,
+             y = YearsAtCompany,
+             fill = Education)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYCM <- train %>% 
+  ggplot(aes(x = Education,
+             y = YearsWithCurrManager,
+             fill = Education)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btTWY <- train %>% 
+  ggplot(aes(x = Education,
+             y = TotalWorkingYears,
+             fill = Education)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
+```
+
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
+  ggplot(aes(x = EducationField,
+             y = log(MonthlyIncome),
+             fill = EducationField)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btAg <- train %>% 
+  ggplot(aes(x = EducationField,
+             y = Age,
+             fill = EducationField)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYAC <- train %>% 
+  ggplot(aes(x = EducationField,
+             y = YearsAtCompany,
+             fill = EducationField)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYCM <- train %>% 
+  ggplot(aes(x = EducationField,
+             y = YearsWithCurrManager,
+             fill = EducationField)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btTWY <- train %>% 
+  ggplot(aes(x = EducationField,
+             y = TotalWorkingYears,
+             fill = EducationField)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
+```
+
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
+  ggplot(aes(x = EnvironmentSatisfaction,
+             y = log(MonthlyIncome),
+             fill = EnvironmentSatisfaction)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btAg <- train %>% 
+  ggplot(aes(x = EnvironmentSatisfaction,
+             y = Age,
+             fill = EnvironmentSatisfaction)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYAC <- train %>% 
+  ggplot(aes(x = EnvironmentSatisfaction,
+             y = YearsAtCompany,
+             fill = EnvironmentSatisfaction)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYCM <- train %>% 
+  ggplot(aes(x = EnvironmentSatisfaction,
+             y = YearsWithCurrManager,
+             fill = EnvironmentSatisfaction)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btTWY <- train %>% 
+  ggplot(aes(x = EnvironmentSatisfaction,
+             y = TotalWorkingYears,
+             fill = EnvironmentSatisfaction)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
+```
+
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
+  ggplot(aes(x = JobInvolvement,
+             y = log(MonthlyIncome),
+             fill = JobInvolvement)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btAg <- train %>% 
+  ggplot(aes(x = JobInvolvement,
+             y = Age,
+             fill = JobInvolvement)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYAC <- train %>% 
+  ggplot(aes(x = JobInvolvement,
+             y = YearsAtCompany,
+             fill = JobInvolvement)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYCM <- train %>% 
+  ggplot(aes(x = JobInvolvement,
+             y = YearsWithCurrManager,
+             fill = JobInvolvement)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btTWY <- train %>% 
+  ggplot(aes(x = JobInvolvement,
+             y = TotalWorkingYears,
+             fill = JobInvolvement)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
+```
+
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
+  ggplot(aes(x = JobLevel,
+             y = log(MonthlyIncome),
+             fill = JobLevel)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btAg <- train %>% 
+  ggplot(aes(x = JobLevel,
+             y = Age,
+             fill = JobLevel)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYAC <- train %>% 
+  ggplot(aes(x = JobLevel,
+             y = YearsAtCompany,
+             fill = JobLevel)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYCM <- train %>% 
+  ggplot(aes(x = JobLevel,
+             y = YearsWithCurrManager,
+             fill = JobLevel)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btTWY <- train %>% 
+  ggplot(aes(x = JobLevel,
+             y = TotalWorkingYears,
+             fill = JobLevel)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
+```
+
+
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
+  ggplot(aes(x = JobRole,
+             y = log(MonthlyIncome),
+             fill = JobRole)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few() + 
+  theme(axis.text.x = element_text(angle = 60, hjust = 1))
+
+btAg <- train %>% 
+  ggplot(aes(x = JobRole,
+             y = Age,
+             fill = JobRole)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few() + 
+  theme(axis.text.x = element_text(angle = 60, hjust = 1))
+
+btYAC <- train %>% 
+  ggplot(aes(x = JobRole,
+             y = YearsAtCompany,
+             fill = JobRole)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few() + 
+  theme(axis.text.x = element_text(angle = 60, hjust = 1))
+
+btYCM <- train %>% 
+  ggplot(aes(x = JobRole,
+             y = YearsWithCurrManager,
+             fill = JobRole)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few() + 
+  theme(axis.text.x = element_text(angle = 60, hjust = 1))
+
+btTWY <- train %>% 
+  ggplot(aes(x = JobRole,
+             y = TotalWorkingYears,
+             fill = JobRole)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few() + 
+  theme(axis.text.x = element_text(angle = 60, hjust = 1))
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
+```
+
+
+
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
+  ggplot(aes(x = JobSatisfaction,
+             y = log(MonthlyIncome),
+             fill = JobSatisfaction)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btAg <- train %>% 
+  ggplot(aes(x = JobSatisfaction,
+             y = Age,
+             fill = JobSatisfaction)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYAC <- train %>% 
+  ggplot(aes(x = JobSatisfaction,
+             y = YearsAtCompany,
+             fill = JobSatisfaction)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYCM <- train %>% 
+  ggplot(aes(x = JobSatisfaction,
+             y = YearsWithCurrManager,
+             fill = JobSatisfaction)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btTWY <- train %>% 
+  ggplot(aes(x = JobSatisfaction,
+             y = TotalWorkingYears,
+             fill = JobSatisfaction)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
+```
+
+
+
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
+  ggplot(aes(x = MaritalStatus,
+             y = log(MonthlyIncome),
+             fill = MaritalStatus)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btAg <- train %>% 
+  ggplot(aes(x = MaritalStatus,
+             y = Age,
+             fill = MaritalStatus)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYAC <- train %>% 
+  ggplot(aes(x = MaritalStatus,
+             y = YearsAtCompany,
+             fill = MaritalStatus)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYCM <- train %>% 
+  ggplot(aes(x = MaritalStatus,
+             y = YearsWithCurrManager,
+             fill = MaritalStatus)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btTWY <- train %>% 
+  ggplot(aes(x = MaritalStatus,
+             y = TotalWorkingYears,
+             fill = MaritalStatus)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
+```
+
+
+
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
+  ggplot(aes(x = OverTime,
+             y = log(MonthlyIncome),
+             fill = OverTime)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btAg <- train %>% 
+  ggplot(aes(x = OverTime,
+             y = Age,
+             fill = OverTime)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYAC <- train %>% 
+  ggplot(aes(x = OverTime,
+             y = YearsAtCompany,
+             fill = OverTime)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYCM <- train %>% 
+  ggplot(aes(x = OverTime,
+             y = YearsWithCurrManager,
+             fill = OverTime)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btTWY <- train %>% 
+  ggplot(aes(x = OverTime,
+             y = TotalWorkingYears,
+             fill = OverTime)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
+```
+
+
+
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
+  ggplot(aes(x = PerformanceRating,
+             y = log(MonthlyIncome),
+             fill = PerformanceRating)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btAg <- train %>% 
+  ggplot(aes(x = PerformanceRating,
+             y = Age,
+             fill = PerformanceRating)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYAC <- train %>% 
+  ggplot(aes(x = PerformanceRating,
+             y = YearsAtCompany,
+             fill = PerformanceRating)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYCM <- train %>% 
+  ggplot(aes(x = PerformanceRating,
+             y = YearsWithCurrManager,
+             fill = PerformanceRating)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btTWY <- train %>% 
+  ggplot(aes(x = PerformanceRating,
+             y = TotalWorkingYears,
+             fill = PerformanceRating)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
+```
+
+
+
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
+  ggplot(aes(x = RelationshipSatisfaction,
+             y = log(MonthlyIncome),
+             fill = RelationshipSatisfaction)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btAg <- train %>% 
+  ggplot(aes(x = RelationshipSatisfaction,
+             y = Age,
+             fill = RelationshipSatisfaction)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYAC <- train %>% 
+  ggplot(aes(x = RelationshipSatisfaction,
+             y = YearsAtCompany,
+             fill = RelationshipSatisfaction)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYCM <- train %>% 
+  ggplot(aes(x = RelationshipSatisfaction,
+             y = YearsWithCurrManager,
+             fill = RelationshipSatisfaction)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btTWY <- train %>% 
+  ggplot(aes(x = RelationshipSatisfaction,
+             y = TotalWorkingYears,
+             fill = RelationshipSatisfaction)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
+```
+
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
+  ggplot(aes(x = StockOptionLevel,
+             y = log(MonthlyIncome),
+             fill = StockOptionLevel)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btAg <- train %>% 
+  ggplot(aes(x = StockOptionLevel,
+             y = Age,
+             fill = StockOptionLevel)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYAC <- train %>% 
+  ggplot(aes(x = StockOptionLevel,
+             y = YearsAtCompany,
+             fill = StockOptionLevel)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYCM <- train %>% 
+  ggplot(aes(x = StockOptionLevel,
+             y = YearsWithCurrManager,
+             fill = StockOptionLevel)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btTWY <- train %>% 
+  ggplot(aes(x = StockOptionLevel,
+             y = TotalWorkingYears,
+             fill = StockOptionLevel)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
+```
+
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
+  ggplot(aes(x = WorkLifeBalance,
+             y = log(MonthlyIncome),
+             fill = WorkLifeBalance)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btAg <- train %>% 
+  ggplot(aes(x = WorkLifeBalance,
+             y = Age,
+             fill = WorkLifeBalance)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYAC <- train %>% 
+  ggplot(aes(x = WorkLifeBalance,
+             y = YearsAtCompany,
+             fill = WorkLifeBalance)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYCM <- train %>% 
+  ggplot(aes(x = WorkLifeBalance,
+             y = YearsWithCurrManager,
+             fill = WorkLifeBalance)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btTWY <- train %>% 
+  ggplot(aes(x = WorkLifeBalance,
+             y = TotalWorkingYears,
+             fill = WorkLifeBalance)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
+```
+
+```{r, fig.width=15, fig.height=15}
+btMI <- train %>% 
+  ggplot(aes(x = Attrition,
+             y = log(MonthlyIncome),
+             fill = Attrition)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btAg <- train %>% 
+  ggplot(aes(x = Attrition,
+             y = Age,
+             fill = Attrition)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYAC <- train %>% 
+  ggplot(aes(x = Attrition,
+             y = YearsAtCompany,
+             fill = Attrition)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btYCM <- train %>% 
+  ggplot(aes(x = Attrition,
+             y = YearsWithCurrManager,
+             fill = Attrition)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+btTWY <- train %>% 
+  ggplot(aes(x = Attrition,
+             y = TotalWorkingYears,
+             fill = Attrition)) +
+  geom_boxplot() + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+
+grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
