Add EDA for attrition

--- a/analysis/exploratory_data_analysis/exporatory_data_analysis.Rmd
+++ b/analysis/exploratory_data_analysis/exporatory_data_analysis.Rmd
@@ -1162,6 +1162,302 @@ grid.arrange(btMI, btAg, btYAC, btYCM, btTWY)
 ```
 
 
+## All Numeric Features vs Attrition
+
+```{r}
+features.numeric
+```
+
+```{r}
+train %>% 
+  ggplot(aes(x = DailyRate)) +
+  geom_histogram(bins = 15) +
+  facet_wrap( ~ Attrition, scales = 'free') + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+```
+
+```{r}
+train %>% 
+  ggplot(aes(x = DistanceFromHome)) +
+  geom_histogram(bins = 15) +
+  facet_wrap( ~ Attrition, scales = 'free') + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+```
+
+
+```{r}
+train %>% 
+  ggplot(aes(x = Age)) +
+  geom_histogram(bins = 15) +
+  facet_wrap( ~ Attrition, scales = 'free') + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+```
+
+```{r}
+train %>% 
+  ggplot(aes(x = HourlyRate)) +
+  geom_histogram(bins = 15) +
+  facet_wrap( ~ Attrition, scales = 'free') + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+```
+
+```{r}
+train %>% 
+  ggplot(aes(x = MonthlyIncome)) +
+  geom_histogram(bins = 15) +
+  facet_wrap( ~ Attrition, scales = 'free') + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+```
+
+```{r}
+train %>% 
+  ggplot(aes(x = MonthlyRate)) +
+  geom_histogram(bins = 15) +
+  facet_wrap( ~ Attrition, scales = 'free') + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+```
+
+```{r}
+train %>% 
+  ggplot(aes(x = NumCompaniesWorked)) +
+  geom_histogram(bins = 15) +
+  facet_wrap( ~ Attrition, scales = 'free') + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+```
+
+
+```{r}
+train %>% 
+  ggplot(aes(x = PercentSalaryHike)) +
+  geom_histogram(bins = 15) +
+  facet_wrap( ~ Attrition, scales = 'free') + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+```
+
+
+
+```{r}
+train %>% 
+  ggplot(aes(x = TotalWorkingYears)) +
+  geom_histogram(bins = 15) +
+  facet_wrap( ~ Attrition, scales = 'free') + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+```
+
+
+```{r}
+train %>% 
+  ggplot(aes(x = TrainingTimesLastYear)) +
+  geom_histogram(bins = 15) +
+  facet_wrap( ~ Attrition, scales = 'free') + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+```
+
+
+```{r}
+train %>% 
+  ggplot(aes(x = YearsAtCompany)) +
+  geom_histogram(bins = 15) +
+  facet_wrap( ~ Attrition, scales = 'free') + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+```
+
+
+
+```{r}
+train %>% 
+  ggplot(aes(x = YearsInCurrentRole)) +
+  geom_histogram(bins = 15) +
+  facet_wrap( ~ Attrition, scales = 'free') + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+```
+
+
+```{r}
+train %>% 
+  ggplot(aes(x = YearsSinceLastPromotion)) +
+  geom_histogram(bins = 15) +
+  facet_wrap( ~ Attrition, scales = 'free') + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+```
+
+
+
+```{r}
+train %>% 
+  ggplot(aes(x = YearsWithCurrManager)) +
+  geom_histogram(bins = 15) +
+  facet_wrap( ~ Attrition, scales = 'free') + 
+  scale_fill_few(palette = 'Dark') + 
+  theme_few()
+```
+
+
+## All Factor Features vs Attrition
+
+```{r}
+features.factor
+```
+
+
+```{r}
+train %>% ggplot(aes(x = BusinessTravel, fill = Attrition)) +
+  geom_bar(position = 'fill') +
+  coord_flip()
+```
+
+
+
+```{r}
+train %>% ggplot(aes(x = Department, fill = Attrition)) +
+  geom_bar(position = 'fill') +
+  coord_flip()
+```
+
+There appears to be some difference between education levels and attition.
+
+```{r}
+train %>% ggplot(aes(x = Education, fill = Attrition)) +
+  geom_bar(position = 'fill') +
+  coord_flip()
+```
+
+There appears to be some difference between education fields and attition.
+
+
+```{r}
+train %>% ggplot(aes(x = EducationField, fill = Attrition)) +
+  geom_bar(position = 'fill') +
+  coord_flip()
+```
+
+There appears to be some difference between environment satisfaction and attition.
+
+```{r}
+train %>% ggplot(aes(x = EnvironmentSatisfaction, fill = Attrition)) +
+  geom_bar(position = 'fill') +
+  coord_flip()
+```
+
+
+
+```{r}
+train %>% ggplot(aes(x = Gender, fill = Attrition)) +
+  geom_bar(position = 'fill') +
+  coord_flip()
+```
+
+Job involvement appears to have a big impact on attiriton
+
+
+```{r}
+train %>% ggplot(aes(x = JobInvolvement, fill = Attrition)) +
+  geom_bar(position = 'fill') +
+  coord_flip()
+```
+
+There is a correlation between job level and attrition
+
+
+```{r}
+train %>% ggplot(aes(x = JobLevel, fill = Attrition)) +
+  geom_bar(position = 'fill') +
+  coord_flip()
+```
+
+There is a correlation between job role and attrition
+
+```{r}
+train %>% ggplot(aes(x = JobRole, fill = Attrition)) +
+  geom_bar(position = 'fill') +
+  coord_flip()
+```
+
+Job satisfaction appears to affect attrition
+
+```{r}
+train %>% ggplot(aes(x = JobSatisfaction, fill = Attrition)) +
+  geom_bar(position = 'fill') +
+  coord_flip()
+```
+
+Marital status also correlates with attrition
+
+```{r}
+train %>% ggplot(aes(x = MaritalStatus, fill = Attrition)) +
+  geom_bar(position = 'fill') +
+  coord_flip()
+```
+
+There appears to be a difference in attition related to overtime
+
+```{r}
+train %>% ggplot(aes(x = OverTime, fill = Attrition)) +
+  geom_bar(position = 'fill') +
+  coord_flip()
+```
+
+
+
+```{r}
+train %>% ggplot(aes(x = PerformanceRating, fill = Attrition)) +
+  geom_bar(position = 'fill') +
+  coord_flip()
+```
+
+
+
+```{r}
+train %>% ggplot(aes(x = RelationshipSatisfaction, fill = Attrition)) +
+  geom_bar(position = 'fill') +
+  coord_flip()
+```
+
+Stock option level appears to play a role in attition
+
+```{r}
+train %>% ggplot(aes(x = StockOptionLevel, fill = Attrition)) +
+  geom_bar(position = 'fill') +
+  coord_flip()
+```
+
+Work life balance appears to play a role in attirition
+
+```{r}
+train %>% ggplot(aes(x = WorkLifeBalance, fill = Attrition)) +
+  geom_bar(position = 'fill') +
+  coord_flip()
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
