--- a/analysis/modeling/modeling_attrition.Rmd
+++ b/analysis/modeling/modeling_attrition.Rmd
@@ -156,9 +156,7 @@ model.cv <-train(y = dfTrain$Attrition,
                                  'TotalWorkingYears',
                                  'MonthlyIncome',
                                  'DistanceFromHome',
-                                 'YearsWithCurrManager',
-                                 'BusinessTravel',
-                                 'EducationField')],
+                                 'YearsWithCurrManager')],
                  method = 'nb',
                  metric = 'Spec',
                  trControl = train.control)
